[gd_scene load_steps=10 format=2]

[ext_resource path="res://GFX/HUD/BG.png" type="Texture" id=1]
[ext_resource path="res://GFX/HUD/Webp.net-resizeimage_18.png" type="Texture" id=2]
[ext_resource path="res://Fonts/candles_.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://GFX/HUD/Button_35.png" type="Texture" id=4]
[ext_resource path="res://GFX/HUD/Button_34.png" type="Texture" id=5]
[ext_resource path="res://GFX/HUD/Button_33.png" type="Texture" id=6]
[ext_resource path="res://Scripts/LevelsMenu.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 140
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 3 )

[node name="LevelsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="TextureRect"]
margin_left = 569.981
margin_top = 212.92
margin_right = 955.981
margin_bottom = 523.92
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="GridContainer" type="GridContainer" parent="TextureRect/TextureRect"]
margin_left = 60.0338
margin_top = 91.0203
margin_right = 706.034
margin_bottom = 521.02
rect_scale = Vector2( 0.4, 0.4 )
size_flags_stretch_ratio = 2.0
custom_constants/vseparation = 50
custom_constants/hseparation = 50
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level1Button" type="TextureButton" parent="TextureRect/TextureRect/GridContainer"]
margin_right = 182.0
margin_bottom = 190.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="Label" type="Label" parent="TextureRect/TextureRect/GridContainer/Level1Button"]
margin_left = 52.8707
margin_top = 10.0
margin_right = 118.871
margin_bottom = 371.0
custom_fonts/font = SubResource( 1 )
text = "1
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level2Button" type="TextureButton" parent="TextureRect/TextureRect/GridContainer"]
margin_left = 232.0
margin_right = 414.0
margin_bottom = 190.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="Label" type="Label" parent="TextureRect/TextureRect/GridContainer/Level2Button"]
margin_left = 32.2921
margin_top = 13.7415
margin_right = 152.292
margin_bottom = 374.742
custom_fonts/font = SubResource( 1 )
text = "2
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level3Button" type="TextureButton" parent="TextureRect/TextureRect/GridContainer"]
margin_left = 464.0
margin_right = 646.0
margin_bottom = 190.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="Label" type="Label" parent="TextureRect/TextureRect/GridContainer/Level3Button"]
margin_left = 36.0338
margin_top = 15.6123
margin_right = 138.034
margin_bottom = 376.612
custom_fonts/font = SubResource( 1 )
text = "3
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level4Button" type="TextureButton" parent="TextureRect/TextureRect/GridContainer"]
margin_top = 240.0
margin_right = 182.0
margin_bottom = 430.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="Label" type="Label" parent="TextureRect/TextureRect/GridContainer/Level4Button"]
margin_left = 22.9384
margin_top = 15.6123
margin_right = 143.938
margin_bottom = 376.612
custom_fonts/font = SubResource( 1 )
text = "4
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level5Button" type="TextureButton" parent="TextureRect/TextureRect/GridContainer"]
margin_left = 232.0
margin_top = 240.0
margin_right = 414.0
margin_bottom = 430.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="Label" type="Label" parent="TextureRect/TextureRect/GridContainer/Level5Button"]
margin_left = 28.5507
margin_top = 15.6123
margin_right = 133.551
margin_bottom = 376.612
custom_fonts/font = SubResource( 1 )
text = "5
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level6Button" type="TextureButton" parent="TextureRect/TextureRect/GridContainer"]
margin_left = 464.0
margin_top = 240.0
margin_right = 646.0
margin_bottom = 430.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="Label" type="Label" parent="TextureRect/TextureRect/GridContainer/Level6Button"]
margin_left = 43.5168
margin_top = 17.4831
margin_right = 127.517
margin_bottom = 378.483
custom_fonts/font = SubResource( 1 )
text = "6
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 765.519
margin_top = 240.207
margin_right = 1254.52
margin_bottom = 342.207
custom_fonts/font = SubResource( 2 )
text = "Level Select"

[connection signal="pressed" from="TextureRect/TextureRect/GridContainer/Level1Button" to="." method="_on_Level1Button_pressed"]
[connection signal="pressed" from="TextureRect/TextureRect/GridContainer/Level2Button" to="." method="_on_Level2Button_pressed"]
[connection signal="pressed" from="TextureRect/TextureRect/GridContainer/Level3Button" to="." method="_on_Level3Button_pressed"]
[connection signal="pressed" from="TextureRect/TextureRect/GridContainer/Level4Button" to="." method="_on_Level4Button_pressed"]
[connection signal="pressed" from="TextureRect/TextureRect/GridContainer/Level5Button" to="." method="_on_Level5Button_pressed"]
[connection signal="pressed" from="TextureRect/TextureRect/GridContainer/Level6Button" to="." method="_on_Level6Button_pressed"]
